# obs-urlsource

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  patch_libobs.diff
.github/actions/run-clang-format/: action.yaml
.github/scripts/: .Brewfile  .build.zsh  .package.zsh
.github/workflows/: build-project.yaml  check-format.yaml  push.yaml
build-aux/: .run-format.zsh
cmake/: BuildInja.cmake  BuildJSONCONS.cmake  BuildLexbor.cmake  BuildLibTidy.cmake  BuildMyCurl.cmake  BuildPugiXML.cmake  FetchWebsocketpp.cmake
cmake/common/: buildspec_common.cmake
cmake/linux/: compilerconfig.cmake
cmake/macos/: helpers.cmake
data/locale/: en-US.ini
src/: mapping-data.cpp  mapping-data.h  obs-source-util.cpp  obs-source-util.h  plugin-main.c  plugin-support.c.in  plugin-support.h  request-data.cpp  request-data.h  string-util.h  url-source-callbacks.cpp  url-source-callbacks.h  url-source-data.h  url-source-info.c  url-source-thread.cpp  url-source-thread.h  url-source.cpp  url-source.h  websocket-client.cpp  websocket-client.h
src/parsers/: CMakeLists.txt  binary-data.cpp  errors.cpp  errors.h  html.cpp  jsonpath.cpp  jsonpointer.cpp  key-value.cpp  parsers.h  regex.cpp  xml.cpp
src/ui/: CollapseButton.h  CustomTextDocument.cpp  CustomTextDocument.h  InputWidget.cpp  InputWidget.h  InputsDialog.cpp  InputsDialog.h  RequestBuilder.cpp  RequestBuilder.h  inputsdialog.ui  inputwidget.ui  obs-ui-utils.cpp  obs-ui-utils.h  outputmapping.cpp  outputmapping.h  outputmapping.ui  requestbuilder.ui  text-render-helper.cpp  text-render-helper.h
